; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_cyrix.c_geode_configure.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_cyrix.c_geode_configure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CX86_CCR2 = common dso_local global i32 0, align 4
@CX86_CCR3 = common dso_local global i32 0, align 4
@CX86_CCR4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @geode_configure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @geode_configure() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = load i64, i64* %1, align 8
  %4 = call i32 @local_irq_save(i64 %3)
  %5 = load i32, i32* @CX86_CCR2, align 4
  %6 = load i32, i32* @CX86_CCR2, align 4
  %7 = call i32 @getCx86(i32 %6)
  %8 = or i32 %7, 136
  %9 = call i32 @setCx86(i32 %5, i32 %8)
  %10 = load i32, i32* @CX86_CCR3, align 4
  %11 = call i32 @getCx86(i32 %10)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* @CX86_CCR3, align 4
  %13 = load i32, i32* %2, align 4
  %14 = and i32 %13, 15
  %15 = or i32 %14, 16
  %16 = call i32 @setCx86(i32 %12, i32 %15)
  %17 = load i32, i32* @CX86_CCR4, align 4
  %18 = load i32, i32* @CX86_CCR4, align 4
  %19 = call i32 @getCx86(i32 %18)
  %20 = or i32 %19, 56
  %21 = call i32 @setCx86(i32 %17, i32 %20)
  %22 = load i32, i32* @CX86_CCR3, align 4
  %23 = load i32, i32* %2, align 4
  %24 = call i32 @setCx86(i32 %22, i32 %23)
  %25 = call i32 (...) @set_cx86_memwb()
  %26 = call i32 (...) @set_cx86_reorder()
  %27 = load i64, i64* %1, align 8
  %28 = call i32 @local_irq_restore(i64 %27)
  ret void
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @setCx86(i32, i32) #1

declare dso_local i32 @getCx86(i32) #1

declare dso_local i32 @set_cx86_memwb(...) #1

declare dso_local i32 @set_cx86_reorder(...) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
